--- a/tp/.env.example
+++ b/tp/.env.example
@@ -2,3 +2,9 @@ API_TOKEN=
 API_URL=
 API_PASSWORD=
 APP_LIST=
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=monitoring
+DB_USER=root
+DB_PASSWORD=root
